@@ -146,11 +146,12 @@ VALUE rb_rrd_fetch(
     }
     free(raw_data);
 
-    result = rb_ary_new2(4);
-    rb_ary_store(result, 0, INT2FIX(start));
-    rb_ary_store(result, 1, INT2FIX(end));
+    result = rb_ary_new2(5);
+    rb_ary_store(result, 0, INT2NUM(start));
+    rb_ary_store(result, 1, INT2NUM(end));
     rb_ary_store(result, 2, names);
     rb_ary_store(result, 3, data);
+    rb_ary_store(result, 4, INT2FIX(step));
     return result;
 }
 
